--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^4.5.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
