--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "jquery": "^3.5.1",
+    "jquery-datetimepicker": "^2.5.21",
     "popper.js": "^1.16.1",
     "postcss-loader": "^3.0.0",
     "sass": "^1.26.8",
