Add drivers model, view, template, url, links

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,6 @@ node_modules/
 
 # ignore webpack generated files
 aerolinksma/static/js/bundle.js
+
+# ignore uploaded files
+aerolinksma/static/media/
